Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13834

10.2 wrongly recognizes 10.1.10 innodb_encrypt_log=ON data as after-crash and refuses to start

    XMLWordPrintable

Details

    Description

      The attached data directory was created by server 10.1.10 from release x86_64 new libc bintar which was run with the following options:

      --no-defaults \
      --file-key-management \
      --file-key-management-filename=/data/bld/10.2/mysql-test/std_data/keys.txt \
      --plugin-load-add=file_key_management.so \
      --innodb-encrypt-tables --innodb-encrypt-log \
      --innodb-encryption-threads=4 \
      --aria-encrypt-tables=1 \
      --encrypt-tmp-disk-tables=1 \
      --encrypt-binlog \
      --innodb-page-size=8K \
      --innodb-compression-algorithm=zlib \
      --loose-innodb-file-format=Barracuda \
      --loose-innodb-file-per-table=1 \
      --loose-lock-wait-timeout=20 \
      --loose-innodb-lock-wait-timeout=10 \
      --loose-innodb_log_compressed_pages=on
      

      A bunch of tables were created, then DML was run for ~1 minute, then the server was shutdown normally. The error log confirming it is attached, as well as the general log in case it's needed.

      Current 10.2 with the same server options refuses to start on this data, saying

      2017-09-18 16:59:14 140600868909120 [Note] InnoDB: Initializing buffer pool, total size = 128M, instances = 1, chunk size = 128M
      2017-09-18 16:59:14 140600868909120 [Note] InnoDB: Completed initialization of buffer pool
      2017-09-18 16:59:14 140600128263936 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
      2017-09-18 16:59:14 140600868909120 [Note] InnoDB: Highest supported file format is Barracuda.
      2017-09-18 16:59:14 140600868909120 [ERROR] InnoDB: Upgrade after a crash is not supported. This redo log was created before MariaDB 10.2.2, and it appears corrupted. Please follow the instructions at http://dev.mysql.com/doc/refman/5.7/en/upgrading.html
      2017-09-18 16:59:14 140600868909120 [ERROR] InnoDB: Plugin initialization aborted at srv0start.cc[2232] with error Data structure corruption
      

      Current 10.1 does start, and does not say anything about crash recovery, only

      2017-09-18 16:45:56 140340660551808 [Note] InnoDB: Initializing buffer pool, size = 128.0M
      2017-09-18 16:45:56 140340660551808 [Note] InnoDB: Completed initialization of buffer pool
      2017-09-18 16:45:56 140340660551808 [Note] InnoDB: Highest supported file format is Barracuda.
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 0 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 3 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 2 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 1 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 15 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 16 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 17 from 0x8027 to 0x127
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 18 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 19 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 20 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 21 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 22 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 23 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 24 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 25 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 26 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 27 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 28 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 29 from 0x8027 to 0x127
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 30 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 31 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 32 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 33 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 34 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 35 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 36 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 37 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 38 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 39 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 40 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 41 from 0x8027 to 0x127
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 42 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 43 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 44 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 45 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 46 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 47 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 48 from 0x8361 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 49 from 0x80e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 50 from 0x84e1 to 0x10121
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 6 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 7 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 8 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 9 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 10 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 11 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 12 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 13 from 0x8000 to 0x100
      2017-09-18 16:45:57 140340660551808 [Warning] InnoDB: adjusting FSP_SPACE_FLAGS of tablespace 14 from 0x8000 to 0x100
      2017-09-18 16:45:58 140340660551808 [Note] InnoDB: 128 rollback segment(s) are active.
      2017-09-18 16:45:58 140340660551808 [Note] InnoDB: Waiting for purge to start
      2017-09-18 16:45:58 140340660551808 [Note] InnoDB:  Percona XtraDB (http://www.percona.com) 5.6.36-82.1 started; log sequence number 9116907
      

      (similar with InnoDB plugin).

      Note: The data has been split into two archives, one with ib_logfileX files, the other with everything else; it's just to allow archives to fit into JIRA limitation, everything is from the same test run, just put ib_logfiles back to the datadir.

      Attachments

        1. ib_logfiles.tar.gz
          8.03 MB
          Elena Stepanova
        2. data_without_ib_logfiles.tar.gz
          8.22 MB
          Elena Stepanova
        3. mysql.err_orig
          33 kB
          Elena Stepanova
        4. mysql.log.gz
          917 kB
          Elena Stepanova

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.